--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,11 @@ html, body{
   background-color: #222;
 }
 
+.content {
+  width: 100%;
+  height: 100%;
+}
+
 /* stage start */
 .stage {
   position: relative;
@@ -24,12 +29,14 @@ html, body{
   overflow: hidden;
   background-color: #ddd;
 
+  perspective: 1800px;
+
   @at-root {
     .img-figure{
       position: absolute;
+
       width: 320px;
       height: 360px;
-
       margin: 0;
       padding: 40px;
 
