--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,8 +41,16 @@ html, body{
       padding: 40px;
 
       box-sizing: border-box;
+      cursor: pointer;
+      transform-origin: 0 50% 0;
+      transform-style: preserve-3d;
+      transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
 
       background-color: #fff;
+
+      &.is-inverse {
+        transform: translate(320px) rotateY(180deg);
+      }
     }
 
     figcaption{
@@ -53,6 +61,32 @@ html, body{
 
         color: #a7a0a2;
         font-size: 16px;
+      }
+
+      .img-back {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        padding: 50px 40px;
+        overflow: auto;
+
+        color: #a7a0a2;
+        font-size: 22px;
+        line-height: 1.25;
+        text-align: left;
+
+        background-color: #fff;
+
+        box-sizing: border-box;
+        transform: rotateY(180deg) translateZ(1px);
+        backface-visibility: hidden;
+      }
+
+      p {
+        margin: 0;
       }
     }
   }
